feat: finish v1 project

--- a/root-app/index.html
+++ b/root-app/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="http://localhost:4173/mf-login.css">
     <link rel="stylesheet" href="http://localhost:4174/mf-navbar.css">
+    <link rel="stylesheet" href="http://localhost:4175/mf-dashboard.css">
+    <link rel="stylesheet" href="http://localhost:4176/mf-personagem-detalhe.css">
     <title>Vite + React + TS</title>
   </head>
   <body>
