--- a/root-app/index.html
+++ b/root-app/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="http://localhost:4173/mf-login.css">
-    <link rel="stylesheet" href="http://localhost:4174/mf-navbar.css">
-    <link rel="stylesheet" href="http://localhost:4175/mf-dashboard.css">
-    <link rel="stylesheet" href="http://localhost:4176/mf-personagem-detalhe.css">
+    <link rel="stylesheet" href="https://lguilhermecardoso.github.io/mfe-react-vite-example/mf-login/mf-login.css">
+    <link rel="stylesheet" href="https://lguilhermecardoso.github.io/mfe-react-vite-example/mf-navbar/mf-navbar.css">
+    <link rel="stylesheet" href="https://lguilhermecardoso.github.io/mfe-react-vite-example/mf-dashboard/mf-dashboard.css">
+    <link rel="stylesheet" href="https://lguilhermecardoso.github.io/mfe-react-vite-example/mf-personagem-detalhe/mf-personagem-detalhe.css">
     <title>Vite + React + TS</title>
   </head>
   <body>
